Resolve warnings/suggestions throughout `AccountsTest`